--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
-opencv-python==4.9.0.80
-mediapipe==0.10.9
+opencv-python-headless==4.9.0.80
+mediapipe==0.10.14
 numpy==1.26.3
 scipy==1.12.0
 openai>=1.50.0
